--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
     },
     "content_scripts": [
       {
-        "matches": ["*:https://www.wikipedia.org/*"],
-        "js": ["content.js"]
+        "js": ["content.js"],
+        "matches":["https://en.wikipedia.org/"]
       }
     ]
   }
