--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "WikiHighlighter",
+    "name": "Highlighter",
     "version": "1.0",
-    "description": "Highlight Wikipedia articles on hover",
+    "description": "Highlights text paraghraphs when hovered",
     "permissions": [
       "activeTab"
     ],
