--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,12 @@
       "activeTab"
     ],
     "action": {
-      "default_icon": "icon.png",
+      "default_icon": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      },
       "default_popup": "popup.html"
     },
     "content_scripts": [
