--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "content_scripts": [
       {
         "js": ["content.js"],
-        "matches":["https://en.m.wikipedia.org/"]
+        "matches":["<all_urls>"]
       }
     ]
   }
